--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     min-height: 100vh;
     background-image: url(IMG/web-bg.jpg);           /*background: #333;*/
     background-size: 100%;
+    background-size: cover;
 }
 
 .conatiner {
